--- a/Projeto/css/folha.css
+++ b/Projeto/css/folha.css
@@ -28,7 +28,7 @@ body{
     border: 1px solid red;
     text-align: center;
     padding-bottom: 10px;
-    margin-left: 10%;
+    margin-left: 2%;
 
 }
 .logo h2{
@@ -43,7 +43,7 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 34px;
     color: #180f4a;
-    font-weight: 800;
+    font-weight: 600px;
 
 }
 
@@ -55,7 +55,36 @@ body{
 }
 
 .menu a {
-
+    text-decoration: none;
     color: #180f4a;
+    font-size: 20px;
+    padding:20px 16px;
+}
+.menu a:hover {
+    color:#ff2978 ;
+    border-top: 4px solid #180F4A;
 }
 
+#contato{
+    background: #180F4A;
+    padding: 10px 25px;
+    color: white;
+    border-radius: 5px;
+    margin-right: 10%;
+    margin-left: 5%;
+}
+
+#contato:hover{
+    border: none;
+    background: #ff2978;
+}
+
+@media screen and (max-width:700px){
+    .menu{
+        flex: 50%;
+    }
+    .logo{
+        flex: 40%;
+        padding-right: 10px;
+    }
+}
