--- a/Projeto/css/folha.css
+++ b/Projeto/css/folha.css
@@ -21,18 +21,28 @@ body{
     align-items: center;
 }
 
+.foto{
+    display: flex;
+    width: 200px;
+    border-radius: 100px;
+    margin-left: 10px;
+    margin-top: 5px;
+    border: 4px solid white;
+    margin-bottom:10px ;
+}
+
 
 
 .logo{
-    flex: 30%;
+    flex: 20%;
     /* border: 1px solid red; */
     text-align: left;
     padding-bottom: 10px;
-    margin-left:10%;
+    margin-left:2%;
 
 }
 .logo h2{
-    padding-top:20px ;
+    padding-top:30px ;
     text-align: center;
     font-family: 'Victor Mono', monospace;
     font-weight: bolder;
@@ -42,7 +52,7 @@ body{
 .logo h1{
     padding-top: 5px;
     font-family: 'Dosis', sans-serif;
-    font-size: 34px;
+    font-size: 54px;
     color: white	;
     font-weight: bold;
     align-items: center;
@@ -60,7 +70,7 @@ body{
     text-decoration: none;
     color: white;
     font-size: 20px;
-    padding:20px 16px;
+    padding:20px 45px;
 }
 .menu a:hover {
     color:#b4f7ee;
@@ -116,21 +126,24 @@ body{
 .headline p {
     color: gray;
     text-align: left;
-    padding: 10px 0px 10px 0px;
+    padding: 30px 0px 20px 0px;
+    font-size: 20px;
 }
 
 .contact-btn{
+    margin-top: 20px;
     display: inline-block;
-    background-color:#099982;
-    padding: 20px;
+    background-color:black;
+    padding: 15px;
     color: white;
     text-transform: uppercase;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 10px;
+    margin-left: 10px;
 }
 
 .contact-btn:hover{
-    background-color: #015043;
+    background-color: #099982;
 }
 
 
